# vc-simulator

./: LICENSE.md  README.md  app.py  library.py  multipage.py  pyproject.toml
.streamlit/: config.toml
pages/: alpha_calculator.py  growth_rates.py  simulator.py
