[tool.poetry]
name = "vc-simulation"
version = "0.1.0"
description = ""
authors = ["Wes De Silvestro"]

[tool.poetry.dependencies]
python = "^3.11"
powerlaw = "^1.5"
numpy = "^1.22.3"
streamlit = "^1.9.0"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
